NotFish/TemplateData/style.css
/****************************************
  ==== RESETS
****************************************/

html,body,div,canvas { margin: 0; padding: 0; }
::-moz-selection { color: #333; text-shadow: none; }
::selection {  color: #333; text-shadow: none; }
.clear:after { visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
.clear { display: inline-table; clear: both; }
/* Hides from IE-mac \*/ * html .clear { height: 1%; } .clear { display: block; } /* End hide from IE-mac */

/****************************************
  ==== LAYOUT
****************************************/

html, body {
	font-family: 'Raleway', sans-serif;
	font-size: 1.5em;
	text-align: center;
	background-color: #eee;
	margin: 0px;
	padding: 0px;
}
#header {
	height: 150px;
}
#footer {
	padding-top: 10px;
}


h1 {
	font-family: 'Raleway', sans-serif;
	font-weight: 100;
}

a {
	text-decoration: none;
	color: black;
}

a:hover {
	color: #999;
}


.content {
    display: block;
    position: relative;
    width: 100%;
}
#dummy {
    padding-top: 42.55%; /* 16:10 */
}

#element {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: silver;
}
#canvas
{
	width: 100%;
	height: 100%;
	position: absolute;
}

